--- a/less/blocks/inputs.less
+++ b/less/blocks/inputs.less
@@ -56,7 +56,8 @@
       color: @brand-danger;
       position: absolute;
       top: 1em;
-      right: 3em;
+      right: 1em;
+      width: 18px;
 }
 
 .input-correct-icon:after {
@@ -66,10 +67,8 @@
       color: @brand-success;
       position: absolute;
       top: 1em;
-      right: 3em;
+      right: 1em;
 }
-
-
 
 
 
