--- a/less/blocks/slider.less
+++ b/less/blocks/slider.less
@@ -17,10 +17,7 @@
   position: relative;
 }
 
-
-.owl-pagination {
-
-  &:before {
+.owl-prev:before {
       content: '\f053';
       color: #fc6e51;
       display: inline-block;
@@ -31,9 +28,8 @@
       font-size: 1em;
       font-family: FontAwesome;
       cursor: pointer;
-  }
-
-  &:after {
+      }
+.owl-next:after {
       content: '\f054';
       color: #fc6e51;
       display: inline-block;
@@ -46,4 +42,4 @@
       cursor: pointer;
     }
 
-}
+
