--- a/less/blocks/tabs.less
+++ b/less/blocks/tabs.less
@@ -1,13 +1,13 @@
 
 .tab {
     position: relative;
-    min-height: 210px;
+    min-height: 14em;
     box-sizing: content-box;
 }
 
 .tab__titles {
   padding: 0;
-  margin: 0;
+  margin: 12px 0;
 
   &:after {
   content: '';
@@ -15,8 +15,8 @@
   display: block;
   position: absolute;
   top: 66px;
-  left: -13px;
-  right: -4px;
+  left: -25px;
+  right: 7px;
   margin: 0 3em;
 }
 }
