--- a/less/style.less
+++ b/less/style.less
@@ -12,6 +12,7 @@
 @import "blocks/forms.less";
 @import "blocks/select-tags.less";
 @import "blocks/formspro.less";
+@import "blocks/tags.less";
 @import "blocks/addition.less";
 @import "blocks/inputs.less";
 @import "blocks/slider.less";
