--- a/sites/dellos/assets/css/main.css
+++ b/sites/dellos/assets/css/main.css
@@ -1184,10 +1184,21 @@ body {
 
   .\-1u\28xsmall\29 {
     margin-left: 8.3333333333%; } }
-/* Basic */
-html, body {
-  background: #1c1d26; }
+video#bgvid {
+  position: fixed;
+  top: 50%;
+  left: 50%;
+  min-width: 100%;
+  min-height: 100%;
+  width: auto;
+  height: auto;
+  z-index: -100;
+  -webkit-transform: translateX(-50%) translateY(-50%);
+  transform: translateX(-50%) translateY(-50%);
+  background: url(.../video/sail.jpg) no-repeat;
+  background-size: cover; }
 
+/* Basic */
 body.is-loading *, body.is-loading *:before, body.is-loading *:after {
   -moz-animation: none !important;
   -webkit-animation: none !important;
@@ -2461,34 +2472,11 @@ body.landing #header {
 
 /* Banner */
 #banner {
-  background-attachment: fixed;
-  background-color: #272833;
-  background-image: url("../../images/banner.jpg");
-  background-position: center center;
-  background-size: cover;
   box-shadow: 0 0.25em 0.5em 0 rgba(0, 0, 0, 0.25);
   min-height: 100vh;
   position: relative;
   text-align: center;
   z-index: 21; }
-  #banner:before {
-    content: '';
-    display: inline-block;
-    height: 100vh;
-    vertical-align: middle;
-    width: 1%; }
-  #banner:after {
-    background-image: -moz-linear-gradient(top, rgba(23, 24, 32, 0.95), rgba(23, 24, 32, 0.95)), url("images/overlay.png");;
-    background-image: -webkit-linear-gradient(top, rgba(23, 24, 32, 0.95), rgba(23, 24, 32, 0.95)), url("images/overlay.png");;
-    background-image: -ms-linear-gradient(top, rgba(23, 24, 32, 0.95), rgba(23, 24, 32, 0.95)), url("images/overlay.png");;
-    background-image: linear-gradient(top, rgba(23, 24, 32, 0.95), rgba(23, 24, 32, 0.95)), url("images/overlay.png");;
-    content: '';
-    display: block;
-    height: 100%;
-    left: 0;
-    position: absolute;
-    top: 0;
-    width: 100%; }
   #banner .content {
     display: inline-block;
     margin-right: 1%;
@@ -2518,9 +2506,6 @@ body.landing #header {
         border-radius: 100%;
         display: block;
         width: 100%; }
-
-body.is-touch #banner {
-  background-attachment: scroll; }
 
 /* Footer */
 #footer {
@@ -2586,10 +2571,6 @@ body.is-touch #banner {
   .dropotron.level-0 {
     font-size: 1em; }
 
-  /* Banner */
-  #banner .content {
-    padding: 4.5em; }
-
   /* Footer */
   #footer {
     padding: 4.5em 0; } }
@@ -2628,19 +2609,17 @@ body.is-touch #banner {
     padding: 4.5em 2.5em 2.5em 2.5em; }
 
   /* Banner */
-  #banner {
-    background-attachment: scroll; }
-    #banner .goto-next {
-      height: 7em; }
-    #banner .content {
-      padding: 9em 0;
+  #banner .goto-next {
+    height: 7em; }
+  #banner .content {
+    padding: 9em 0;
+    text-align: center; }
+    #banner .content header {
+      display: block;
+      margin: 0 0 2em 0;
       text-align: center; }
-      #banner .content header {
-        display: block;
-        margin: 0 0 2em 0;
-        text-align: center; }
-      #banner .content .image {
-        margin: 0; }
+    #banner .content .image {
+      margin: 0; }
 
   /* Footer */
   #footer {
