--- a/sites/dellos/assets/sass/libs/_vars.scss
+++ b/sites/dellos/assets/sass/libs/_vars.scss
@@ -30,6 +30,7 @@
 
 // Palette.
 	$palette: (
+		white:						#fff,
 		color-transparent:			rgba(255,255,255,0.05),
 		bg:					#1c1d26,
 		bg-transparent:		rgba(23,24,32,0.95),
