--- a/sites/dellos/assets/css/ie8.css
+++ b/sites/dellos/assets/css/ie8.css
@@ -130,4 +130,4 @@ input[type="button"],
   #banner:before {
     height: 100%; }
   #banner:after {
-    background-image: url("images/ie/banner-overlay.png"); }
+    background-image: url("video/sail.jpg"); }
