--- a/sites/dellos/assets/sass/ie8.scss
+++ b/sites/dellos/assets/sass/ie8.scss
@@ -211,6 +211,6 @@
 		}
 
 		&:after {
-			background-image: url('images/ie/banner-overlay.png');
+			background-image: url('video/sail.jpg');
 		}
 	}
