--- a/sites/dellos/assets/css/ie9.css
+++ b/sites/dellos/assets/css/ie9.css
@@ -14,8 +14,19 @@ body.landing:before, body.landing:after {
   color: #ffffff !important; }
 
 /* Banner */
-#banner:after {
-  background-color: rgba(23, 24, 32, 0.95); }
+#banner {
+  background-attachment: fixed;
+  background-color: #272833;
+  background-position: center center;
+  background-size: cover;
+  box-shadow: 0 0.25em 0.5em 0 rgba(0, 0, 0, 0.25);
+  min-height: 100vh;
+  position: relative;
+  text-align: center;
+  z-index: 21;
+  background-image: url(/video/sail.jpg); }
+  #banner:after {
+    background-color: rgba(23, 24, 32, 0.95); }
 
 /* Footer */
 #footer .icons .icon.alt:before {
