--- a/sites/dellos/assets/css/main.css
+++ b/sites/dellos/assets/css/main.css
@@ -1184,6 +1184,124 @@ body {
 
   .\-1u\28xsmall\29 {
     margin-left: 8.3333333333%; } }
+.rounded {
+  border-radius: 10px; }
+
+.sprite {
+  width: 170px;
+  height: 80px;
+  background-image: url(/images/sprite.png);
+  border-radius: 10px;
+  text-align: center;
+  margin: 0 auto 70px auto; }
+  .sprite h4 {
+    padding-top: 80px; }
+
+#gazprom {
+  background-position: -15px -30px; }
+
+#lukoil {
+  background-position: -215px -30px; }
+
+#faeton {
+  background-position: -417px -30px; }
+
+#ptk {
+  background-position: -614px -30px; }
+
+#statoil {
+  background-position: -814px -30px; }
+
+#rosneft {
+  background-position: -15px -172px; }
+
+#shell {
+  background-position: -215px -172px; }
+
+#sng {
+  background-position: -415px -172px; }
+
+#neste {
+  background-position: -615px -172px; }
+
+#netto {
+  background-position: -815px -172px; }
+
+#semya {
+  background-position: -1015px -313px; }
+
+#idea {
+  background-position: -1215px -313px; }
+
+#laym {
+  background-position: -1415px -313px; }
+
+#lend {
+  background-position: -1615px -313px; }
+
+#gast811 {
+  background-position: -1815px -313px; }
+
+#riomag {
+  background-position: -1015px -450px; }
+
+#sezon {
+  background-position: -1215px -450px; }
+
+#babylon {
+  background-position: -1415px -450px; }
+
+#plovdiv {
+  background-position: -1615px -450px; }
+
+#spar {
+  background-position: -1815px -450px; }
+
+#real {
+  background-position: -1015px -590px; }
+
+#norman {
+  background-position: -1215px -590px; }
+
+#bahetle {
+  background-position: -1415px -590px; }
+
+#polushka {
+  background-position: -1615px -590px; }
+
+#karusel {
+  background-position: -1815px -590px; }
+
+#perekrestok {
+  background-position: -1015px -727px; }
+
+#rigla {
+  background-position: -1215px -730px; }
+
+#edifarm {
+  background-position: -1415px -730px; }
+
+#lekrus {
+  background-position: -1615px -730px; }
+
+#zdorovie {
+  background-position: -1815px -730px; }
+
+#nevis {
+  background-position: -1015px -870px; }
+
+#fialka {
+  background-position: -1215px -870px; }
+
+#ozerki {
+  background-position: -1415px -870px; }
+
+#raduga {
+  background-position: -1615px -870px; }
+
+#pomosh {
+  background-position: -1815px -870px; }
+
 video#bgvid {
   position: fixed;
   top: 50%;
@@ -2082,7 +2200,7 @@ input[type="button"],
   input[type="reset"].special,
   input[type="button"].special,
   .button.special {
-    background-color: #4CAF50;
+    background-color: rgba(76, 175, 80, 0.9);
     box-shadow: none;
     color: #ffffff !important;
     border: 1px solid #fff !important; }
@@ -2469,8 +2587,8 @@ body.landing .dropotron.level-0 {
 body.landing #page-wrapper {
   padding-top: 0; }
 body.landing #header {
-  background: #4CAF50;
-  box-shadow: none;
+  background: rgba(76, 175, 80, 0.9);
+  box-shadow: 0 0 0.25em 0 rgba(0, 0, 0, 0.25);
   position: fixed; }
 
 /* Banner */
@@ -2650,6 +2768,12 @@ body.landing #header {
   display: none; }
 
 @media screen and (max-width: 736px) {
+  iframe {
+    height: 200px; }
+
+  video#bgvid {
+    display: none; }
+
   /* Basic */
   html, body {
     overflow-x: hidden; }
@@ -2706,7 +2830,17 @@ body.landing #header {
   /* Banner */
   #banner {
     box-shadow: 0 0.125em 0.5em 0 rgba(0, 0, 0, 0.25);
-    min-height: calc(100vh - 44px); }
+    min-height: calc(100vh - 44px);
+    background-attachment: fixed;
+    background-color: #272833;
+    background-position: center center;
+    background-size: cover;
+    box-shadow: 0 0.25em 0.5em 0 rgba(0, 0, 0, 0.25);
+    min-height: 100vh;
+    position: relative;
+    text-align: center;
+    z-index: 21;
+    background-image: url(/video/sail.jpg); }
     #banner:before {
       height: calc(100vh - 44px); }
     #banner .content {
@@ -2919,3 +3053,5 @@ body.landing #header {
         display: block;
         margin: 0;
         padding: 0; } }
+.empty {
+  padding-top: 0; }
