--- a/sites/dellos/assets/sass/ie9.scss
+++ b/sites/dellos/assets/sass/ie9.scss
@@ -36,6 +36,17 @@
 /* Banner */
 
 	#banner {
+				background-attachment: fixed;
+		background-color: _palette(accent2);
+		background-position: center center;
+		background-size: cover;
+		box-shadow: 0 0.25em 0.5em 0 rgba(0,0,0,0.25);
+		min-height: 100vh;
+		position: relative;
+		text-align: center;
+		z-index: (_misc(max-spotlight) + 1);
+		background-image: url(/video/sail.jpg);
+
 		&:after {
 			background-color: _palette(bg-transparent);
 		}
