--- a/sites/dellos/assets/sass/libs/_vars.scss
+++ b/sites/dellos/assets/sass/libs/_vars.scss
@@ -42,6 +42,7 @@
 		border-bg:			rgba(255,255,255,0.075),
 		border2:			rgba(255,255,255,0.5),
 		border2-bg:			rgba(255,255,255,0.25),
+		accent09:			rgba(76, 175, 80, 0.9),
 		accent1:			#4CAF50,
 		accent2:			#272833,
 		accent2-transparent:rgba(39,40,51,0.965),
