--- a/sites/dellos/assets/sass/main.scss
+++ b/sites/dellos/assets/sass/main.scss
@@ -56,7 +56,7 @@ div#map_canvas {
 .sprite {
 	width: 170px;
 	height: 80px;
-	background-image: url(/images/sprite.png);
+	background-image: url(../../images/sprite.png);
 	border-radius: 10px;
 	text-align: center;
 	margin: 0 auto 70px auto;
