Creating my site

--- a/sites/dellos/assets/css/main.css
+++ b/sites/dellos/assets/css/main.css
@@ -1306,19 +1306,25 @@ div#map_canvas {
   background-position: -1815px -870px; }
 
 video#bgvid {
-  position: fixed;
+  position: absolute;
   top: 50%;
   left: 50%;
   min-width: 100%;
   min-height: 100%;
   width: auto;
-  height: auto;
+  height: 100vh;
   z-index: -100;
   -webkit-transform: translateX(-50%) translateY(-50%);
   transform: translateX(-50%) translateY(-50%);
-  background: url(.../video/sail.jpg) no-repeat;
+  background: url(../../video/sail.jpg) no-repeat;
   background-size: cover; }
 
+@media screen and (max-device-width: 800px) {
+  body {
+    background: url(../../video/sail.jpg) #000 no-repeat center center fixed; }
+
+  #bgvid {
+    display: none; } }
 /* Basic */
 body.is-loading *, body.is-loading *:before, body.is-loading *:after {
   -moz-animation: none !important;
@@ -2576,6 +2582,8 @@ body.landing .dropotron.level-0 {
           height: inherit;
           line-height: inherit;
           outline: 0; }
+          #header nav ul li a:hover, #header nav ul li span:hover {
+            text-decoration: underline; }
           #header nav ul li a.button, #header nav ul li span.button {
             height: 2em;
             line-height: 2em;
@@ -3058,3 +3066,20 @@ body.landing #header {
         padding: 0; } }
 .empty {
   padding-top: 0; }
+
+h3, h4 {
+  margin-top: .5em; }
+
+.faq li {
+  margin-bottom: 20px; }
+.faq span {
+  font-size: 14px; }
+
+@media screen and (min-width: 768px) {
+  section.faq ul {
+    width: 40em;
+    margin: 0 auto; } }
+h1#logo {
+  padding: 10px 0; }
+  h1#logo img {
+    line-height: 61px; }
