--- a/sites/schastye/style.css
+++ b/sites/schastye/style.css
@@ -1,75 +1,59 @@
 @charset "UTF-8";
 
 @font-face {
-  font-family: "et-book";
-  src: url("et-book/et-book-roman-line-figures/et-book-roman-line-figures.eot");
-  src: url("et-book/et-book-roman-line-figures/et-book-roman-line-figures.eot?#iefix") format("embedded-opentype"), url("et-book/et-book-roman-line-figures/et-book-roman-line-figures.woff") format("woff"), url("et-book/et-book-roman-line-figures/et-book-roman-line-figures.ttf") format("truetype"), url("et-book/et-book-roman-line-figures/et-book-roman-line-figures.svg#etbookromanosf") format("svg");
+  font-family: "font";
+  src: url("font/font.ttf");
   font-weight: normal;
   font-style: normal
 }
 
 @font-face {
-  font-family: "et-book";
-  src: url("et-book/et-book-display-italic-old-style-figures/et-book-display-italic-old-style-figures.eot");
-  src: url("et-book/et-book-display-italic-old-style-figures/et-book-display-italic-old-style-figures.eot?#iefix") format("embedded-opentype"), url("et-book/et-book-display-italic-old-style-figures/et-book-display-italic-old-style-figures.woff") format("woff"), url("et-book/et-book-display-italic-old-style-figures/et-book-display-italic-old-style-figures.ttf") format("truetype"), url("et-book/et-book-display-italic-old-style-figures/et-book-display-italic-old-style-figures.svg#etbookromanosf") format("svg");
-  font-weight: normal;
-  font-style: italic
-}
-
-@font-face {
-  font-family: "et-book";
-  src: url("et-book/et-book-bold-line-figures/et-book-bold-line-figures.eot");
-  src: url("et-book/et-book-bold-line-figures/et-book-bold-line-figures.eot?#iefix") format("embedded-opentype"), url("et-book/et-book-bold-line-figures/et-book-bold-line-figures.woff") format("woff"), url("et-book/et-book-bold-line-figures/et-book-bold-line-figures.ttf") format("truetype"), url("et-book/et-book-bold-line-figures/et-book-bold-line-figures.svg#etbookromanosf") format("svg");
+  font-family: "font2";
+  src: url("font/font2.woff");
   font-weight: bold;
-  font-style: normal
-}
-
-@font-face {
-  font-family: "et-book-roman-old-style";
-  src: url("et-book/et-book-roman-old-style-figures/et-book-roman-old-style-figures.eot");
-  src: url("et-book/et-book-roman-old-style-figures/et-book-roman-old-style-figures.eot?#iefix") format("embedded-opentype"), url("et-book/et-book-roman-old-style-figures/et-book-roman-old-style-figures.woff") format("woff"), url("et-book/et-book-roman-old-style-figures/et-book-roman-old-style-figures.ttf") format("truetype"), url("et-book/et-book-roman-old-style-figures/et-book-roman-old-style-figures.svg#etbookromanosf") format("svg");
-  font-weight: normal;
-  font-style: normal;
+  font-style: bold
 }
 
 html { font-size: 12px; }
 
-body { width: 90%;
+body { width: 85%;
        margin-left: auto;
        margin-right: auto;
-       padding-left: 10%;
-       font-family: et-book, Palatino, "Palatino Linotype", "Palatino LT STD", "Book Antiqua", Georgia, serif;
-       background-color: #fffff8;
-       color: #111;
+       padding-left: 15%;
+       font-family: font, Helvetica, sans-serif;
+       background: linear-gradient(0deg, #F9D423 10%, #FDDC2F 90%);
+       color: #222;
        max-width: 1400px;
        counter-reset: sidenote-counter; }
 
 h1 { font-weight: 400;
      margin-top: 4rem;
      margin-bottom: 1.5rem;
+     font-size: 6.2rem;
+     line-height: 1;
+     font-weight: bold; }
+
+h2 { font-style: normal;
+     font-weight: 400;
+     margin-top: 4.1rem;
+     margin-bottom: 0;
      font-size: 3.2rem;
      line-height: 1; }
 
-h2 { font-style: italic;
-     font-weight: 400;
-     margin-top: 2.1rem;
-     margin-bottom: 0;
-     font-size: 2.2rem;
-     line-height: 1; }
-
-h3 { font-style: italic;
+h3 { font-style: normal;
      font-weight: 400;
      font-size: 1.7rem;
      margin-top: 2rem;
      margin-bottom: 0;
      line-height: 1; }
 
-p.subtitle { font-style: italic;
-             margin-top: 1rem;
+p.subtitle { font-family: font2;
+             margin-top: 0;
              margin-bottom: 1rem;
-             font-size: 1.8rem;
+             font-size: 7.8rem;
              display: block;
-             line-height: 1; }
+             line-height: 1;
+             color: #fff; }
 
 table { overflow-x: scroll;
         width: 98%;
@@ -188,14 +172,15 @@ img { max-width: 100%; }
 
 .sidenote, .marginnote { float: right;
                          clear: right;
-                         margin-right: -60%;
-                         width: 50%;
+                         margin-right: 0;
+                         width: 20%;
                          margin-top: 0;
                          margin-bottom: 0;
                          font-size: 1.1rem;
                          line-height: 1.3;
                          vertical-align: baseline;
-                         position: relative; }
+                         position: relative;
+                         text-align: right; }
 
 .table-caption { float:right;
                  clear:right;
@@ -221,7 +206,7 @@ img { max-width: 100%; }
 .sidenote:before { content: counter(sidenote-counter) " ";
                    top: -0.5rem; }
 
-p, footer, div.table-wrapper { width: 55%; }
+p, footer, div.table-wrapper { width: 80%; }
 
 div.table-wrapper { overflow-x: scroll; }
 
@@ -286,3 +271,16 @@ label.margin-toggle:not(.sidenote-number) { display: none; }
                             div.table-wrapper, table, table.booktabs { width: 85%; }
                             div.table-wrapper { border-right: 1px solid #efefef; }
                             img { width: 100%; } }
+
+
+
+.small {
+  text-align: right;
+  font-size: 1.2rem;
+}
+
+
+hr {
+  border:0;
+  margin: 5rem 0;
+}
