--- a/sites/schastye/style.css
+++ b/sites/schastye/style.css
@@ -21,6 +21,7 @@ body { width: 85%;
        margin-right: auto;
        padding-left: 15%;
        font-family: font, Helvetica, sans-serif;
+       background-color:#FDDC2F;
        background: linear-gradient(0deg, #F9D423 10%, #FDDC2F 90%);
        color: #222;
        max-width: 1400px;
