--- a/sites/vita/style.css
+++ b/sites/vita/style.css
@@ -22,7 +22,7 @@ body { width: 85%;
        padding-left: 15%;
        font-family: font, Helvetica, sans-serif;
        background-color:#FDDC2F;
-       background: linear-gradient(0deg, #00d2ff 10%, #3a7bd5 90%);
+       background: linear-gradient(0deg, #00b0d5 10%, #4593ff 90%);
        color: #222;
        max-width: 1400px;
        counter-reset: sidenote-counter; }
@@ -141,7 +141,7 @@ blockquote p { font-size: 1.1rem;
 blockquote footer { width: 50%;
                     text-align: right; }
 
-ul { width: 100%;
+ul { width: 80%;
     -webkit-padding-start: 35px }
 ol { width: 45%;}
 
@@ -166,9 +166,7 @@ figcaption { float: right;
 figure.fullwidth figcaption { margin-right: 24%; }
 
 a { color: #111;
-    text-decoration: none;
-    border-bottom: 1px solid #777;
-    padding-bottom: 1px; }
+    text-decoration: none;}
 
 img { max-width: 100%; }
 
@@ -302,14 +300,22 @@ a.pure {
   left: 0;
   top: 5rem;
   font-size: 1px!important;
+  color: #fff;
 }
 .nav li{
   font-size: 14px;
+  color: #fff;
+}
+
+.nav a{
+  color: #fff;
+  border: none;
 }
 
 
 .nav a:hover{
   color: #fff;
+  border-bottom: 1px solid #fff;
 }
 
 
