--- a/sites/art/css/fonts/font.less
+++ b/sites/art/css/fonts/font.less
@@ -1,12 +1,16 @@
-/* then for WOFF-capable browsers */
+
 @font-face {
-  font-family: ProbaProRegular;
-  src: url("fonts/ProbaPro-RegularWeb.woff") format("woff");
+    font-family: 'Open Sans';
+    src: local('Open Sans'), local('OpenSans'), url('fonts/opensans.woff2') format('woff2'), url('fonts/opensans.woff') format('woff'), url('fonts/opensans.ttf') format('truetype');
+    font-weight: 400;
+    font-style: normal;
 }
 
-/* go on with normal style definitions */
-body { 
-  font-family: ProbaProRegular, sans-serif;
+@font-face {
+    font-family: 'Open Sans';
+    src: local('Open Sans Bold'), local('OpenSans-Bold'), url('fonts/opensansbold.woff2') format('woff2'), url('fonts/opensansbold.woff') format('woff'), url('fonts/opensansbold.ttf') format('truetype');
+    font-weight: 700;
+    font-style: normal;
 }
 
 
@@ -24,3 +28,5 @@ body {
   font-family: ProximaNova;
   src: url("fonts/ProximaNova-Reg.woff") format("woff");
 }
+
+
